setting: build.gradle, application.yaml 파일 의존성 추가 - application.yaml : jwt 설정 추가
- build.gradle : jwt 설정 , xml-bind 의존성 추가

--- a/be/issue-tracker/src/main/resources/application.yaml
+++ b/be/issue-tracker/src/main/resources/application.yaml
@@ -20,3 +20,7 @@ spring:
       on-profile: prod
 #  datasource:
 ---
+
+jwt:
+  secret: "code_squad_team_08" # JWT 서명에 사용될 비밀값
+  expirationTime: 3600000 # 토큰의 만료 시간 (밀리초 단위, 여기서는 1시간)
