--- a/be/issue-tracker/build.gradle
+++ b/be/issue-tracker/build.gradle
@@ -24,6 +24,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'	// xml bind 구현 의존성 추가
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'		// jwt 구현 의존성 추가
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
