--- a/be/issue-tracker/src/main/resources/application.yaml
+++ b/be/issue-tracker/src/main/resources/application.yaml
@@ -3,24 +3,30 @@ spring:
     active: local #default
   application:
     name: issue-tracker
+
 ---
 spring:
+  profiles: local
   config:
     activate:
       on-profile: local
-
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:tcp://localhost/~/issue-tracker
     username: sa
+
 ---
 spring:
+  profiles: prod
   config:
     activate:
       on-profile: prod
-#  datasource:
----
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/issue-tracker?useSSL=false&serverTimezone=UTC
+    username: root
 
+---
 jwt:
   secret: "code_squad_team_08" # JWT 서명에 사용될 비밀값
   expirationTime: 3600000 # 토큰의 만료 시간 (밀리초 단위, 여기서는 1시간)
