--- a/be/issue-tracker/src/main/resources/application.yaml
+++ b/be/issue-tracker/src/main/resources/application.yaml
@@ -1,12 +1,13 @@
 spring:
-  profiles:
-    active: local #default
+  config:
+    activate:
+      on-profile: local # default
   application:
     name: issue-tracker
 
 ---
+
 spring:
-  profiles: local
   config:
     activate:
       on-profile: local
@@ -16,8 +17,8 @@ spring:
     username: sa
 
 ---
+
 spring:
-  profiles: prod
   config:
     activate:
       on-profile: prod
@@ -27,6 +28,7 @@ spring:
     username: root
 
 ---
+
 jwt:
   secret: "code_squad_team_08" # JWT 서명에 사용될 비밀값
   expirationTime: 3600000 # 토큰의 만료 시간 (밀리초 단위, 여기서는 1시간)
