--- a/be/issue-tracker/src/main/resources/application.yaml
+++ b/be/issue-tracker/src/main/resources/application.yaml
@@ -1,9 +1,6 @@
 spring:
-  config:
-    activate:
-      on-profile: local # default
-  application:
-    name: issue-tracker
+  profiles:
+    active: local
 
 ---
 
@@ -11,6 +8,12 @@ spring:
   config:
     activate:
       on-profile: local
+  application:
+    name: issue-tracker
+
+---
+
+spring:
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:tcp://localhost/~/issue-tracker
