--- a/be/issue-tracker/src/main/resources/application.yaml
+++ b/be/issue-tracker/src/main/resources/application.yaml
@@ -27,9 +27,9 @@ spring:
       on-profile: prod
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/issue-tracker?useSSL=false&serverTimezone=UTC
-    username: root
-
+    url: jdbc:mysql://localhost:3306/issue_tracker?useSSL=false&serverTimezone=UTC
+    username: admin
+    password: admin
 ---
 
 jwt:
