--- a/be/issue-tracker/.github/workflows/github-actions.yaml
+++ b/be/issue-tracker/.github/workflows/github-actions.yaml
@@ -1,127 +1,67 @@
-# github repository actions 페이지에 나타날 이름
-name: CI/CD using github actions & docker
+name: Deploy Spring Application to Ec2
 
-# event trigger
-# main이나 develop 브랜치에 push가 되었을 때 실행
 on:
   push:
-    branches: [ "main", "develop", "feat/member" ]
+    branches: [ "feat/member" ]
 
+# 워크플로우가 저장소의 콘텐츠를 읽을 수 있는 권한을 갖도록 설정
 permissions:
   contents: read
 
 jobs:
-  CI-CD:
+  build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout the code
+        uses: actions/checkout@v4
 
-      # JDK setting - github actions에서 사용할 JDK 설정 (프로젝트나 AWS의 java 버전과 달라도 무방)
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: set up JDK 17
+        uses: actions/setup-java@v4
         with:
+          distribution: 'corretto'
           java-version: '17'
-          distribution: 'adopt'
 
-      # gradle caching - 빌드 시간 향상
-      - name: Gradle Caching
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      # 환경별 yml 파일 생성(1) - application.yaml
-      - name: make application.yaml
-        if: |
-          contains(github.ref, 'main') ||
-          contains(github.ref, 'BE') ||
-          contains(github.ref, 'feat/member')
+      - name: Make application.yaml
         run: |
-          mkdir ./src/main/resources # resources 폴더 생성
-          cd ./src/main/resources # resources 폴더로 이동
-          touch ./application.yaml # application.yml 생성
-          echo "${{ secrets.YML }}" > ./application.yml # github actions에서 설정한 값을 application.yaml 파일에 쓰기
+          cd ./be/issue-tracker/src/main
+          mkdir resources
+          cd resources
+          touch application.yaml
+          echo "${{ secrets.YAML }}" > ./application.yaml
         shell: bash
 
+      - name: Grant execute permission for gradlew
+        run: |
+          cd ./be/issue-tracker
+          chmod +x gradlew
 
-      # gradle build
       - name: Build with Gradle
-        run: ./gradlew build -x test
-
-      # docker build & push to production
-      - name: Docker build & push to prod
-        if: contains(github.ref, 'main')
         run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build -f Dockerfile-dev -t ${{ secrets.DOCKER_USERNAME }}/docker-test-prod .
-          docker push ${{ secrets.DOCKER_USERNAME }}/docker-test-prod
+          cd ./be/issue-tracker
+          ./gradlew clean build -x test
 
-      # docker build & push to develop
-      - name: Docker build & push to dev
-        if: contains(github.ref, 'develop')
+      # dockerfile을 통해 이미지를 빌드하고, 이를 docker repo로 push 합니다.
+      - name: Docker build & push to docker repo
         run: |
+          cd ./be/issue-tracker 
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build -f Dockerfile-dev -t ${{ secrets.DOCKER_USERNAME }}/docker-test-dev .
-          docker push ${{ secrets.DOCKER_USERNAME }}/docker-test-dev
+          docker build -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest
 
-      # docker build & push to develop
-      - name: Docker build & push to feat
-        if: contains(github.ref, 'feat/member')
-        run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build -f Dockerfile-dev -t ${{ secrets.DOCKER_USERNAME }}/docker-test-feat .
-          docker push ${{ secrets.DOCKER_USERNAME }}/docker-test-feat
-
-      ## deploy to production
-      - name: Deploy to prod
+      # 서버에 접속 후 Docker 이미지 가져와서 배포
+      - name: Deploy to server
         uses: appleboy/ssh-action@master
-        id: deploy-prod
-        if: contains(github.ref, 'main')
         with:
-          host: ${{ secrets.HOST_PROD }} # EC2 퍼블릭 IPv4 DNS
-          username: ubuntu
-          key: ${{ secrets.PRIVATE_KEY }}
-          envs: GITHUB_SHA
-          script: |
-            sudo docker ps
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/docker-test-prod
-            sudo docker run -d -p 8082:8082 ${{ secrets.DOCKER_USERNAME }}/docker-test-prod
-            sudo docker image prune -f
-
-      ## deploy to develop
-      - name: Deploy to dev
-        uses: appleboy/ssh-action@master
-        id: deploy-dev
-        if: contains(github.ref, 'develop')
-        with:
-          host: ${{ secrets.HOST_PROD }} # EC2 퍼블릭 IPv4 DNS
-          username: ${{ secrets.USERNAME }} # ubuntu
-          password: ${{ secrets.PASSWORD }}
-          port: 22
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
-            sudo docker ps
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/docker-test-dev
-            sudo docker run -d -p 8081:8081 ${{ secrets.DOCKER_USERNAME }}/docker-test-dev
-            sudo docker image prune -f
-
-      ## deploy to feat
-      - name: Deploy to feat
-        uses: appleboy/ssh-action@master
-        id: deploy-feat
-        if: contains(github.ref, 'feat/member')
-        with:
-          host: ${{ secrets.HOST_PROD }} # EC2 퍼블릭 IPv4 DNS
-          username: ${{ secrets.USERNAME }} # ubuntu
-          password: ${{ secrets.PASSWORD }}
-          port: 22
-          key: ${{ secrets.PRIVATE_KEY }}
-          script: |
-            sudo docker ps
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/docker-test-feat
-            sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/docker-test-feat
-            sudo docker image prune -f
+            sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest
+            # 기존에 실행 중인 컨테이너 중지 및 삭제
+            if [ $(sudo docker ps -q -f name=spring-server) ]; then
+              sudo docker stop spring-server
+              sudo docker rm spring-server
+            fi
+            # 새로운 컨테이너 실행
+              sudo docker run -d -p 8080:8080 --name spring-server ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest
