--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -45,8 +45,8 @@ jobs:
         run: |
           cd ./be/issue-tracker 
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} .
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
+          docker build -f Dockerfile -t ${{ secrets.DOCKER_ID }}/${{ secrets.DOCKER_REPO }} .
+          docker push ${{ secrets.DOCKER_ID }}/${{ secrets.DOCKER_REPO }}
 
       # 서버에 접속 후 Docker 이미지 가져와서 배포
       - name: Deploy to server
@@ -57,11 +57,11 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
             sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
+            sudo docker pull ${{ secrets.DOCKER_ID }}/${{ secrets.DOCKER_REPO }}
             # 기존에 실행 중인 컨테이너 중지 및 삭제
             if [ $(sudo docker ps -q -f name=spring-server) ]; then
               sudo docker stop spring-server
               sudo docker rm spring-server
             fi
             # 새로운 컨테이너 실행
-              sudo docker run -d -p 8080:8080 --name spring-server ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
+              sudo docker run -d -p 8080:8080 --name spring-server ${{ secrets.DOCKER_ID }}/${{ secrets.DOCKER_REPO }}
