--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -1,4 +1,4 @@
-name: Deploy Spring Application to Ec2
+name: Deploy Spring Application to EC2
 
 # feat/member에 대한 브랜치 push가 수행되었을 때 동작
 on:
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v4
 
-      - name: set up JDK 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'corretto'
@@ -25,10 +25,10 @@ jobs:
       - name: Make application.yaml
         run: |
           cd ./be/issue-tracker/src/main
-          mkdir resources
+          mkdir -p resources
           cd resources
           touch application.yaml
-          echo "${{ secrets.YAML }}" > ./application.yaml
+          echo "${{ secrets.YAML }}" > application.yaml
         shell: bash
 
       - name: Grant execute permission for gradlew
@@ -41,11 +41,11 @@ jobs:
           cd ./be/issue-tracker
           ./gradlew clean build -x test
 
-      # dockerfile을 통해 이미지를 빌드하고, 이를 docker repo로 push 합니다.
-      - name: Docker build & push to docker repo
+      # Dockerfile을 통해 이미지를 빌드하고, 이를 Docker repo로 push
+      - name: Docker build & push to Docker repo
         run: |
           cd ./be/issue-tracker 
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker build -f Dockerfile -t ${{ secrets.DOCKER_ID }}/${{ secrets.DOCKER_REPO }}:latest .
           docker push ${{ secrets.DOCKER_ID }}/${{ secrets.DOCKER_REPO }}:latest
 
@@ -57,13 +57,12 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
-            sudo docker ps -q -f
-            sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            sudo docker pull ${{ secrets.DOCKER_ID }}/${{ secrets.DOCKER_REPO }}:latest .
+            echo ${{ secrets.DOCKER_PASSWORD }} | sudo docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+            sudo docker pull ${{ secrets.DOCKER_ID }}/${{ secrets.DOCKER_REPO }}:latest
             # 기존에 실행 중인 컨테이너 중지 및 삭제
-            if [ $(sudo docker ps -q -f name=spring-server) ]; then
+            if [ $(sudo docker ps -q -f "name=spring-server") ]; then
               sudo docker stop spring-server
               sudo docker rm spring-server
             fi
             # 새로운 컨테이너 실행
-              sudo docker run -d -p 8081:8081 --name spring-server ${{ secrets.DOCKER_ID }}/${{ secrets.DOCKER_REPO }}
+            sudo docker run -d -p 8081:8081 --name spring-server ${{ secrets.DOCKER_ID }}/${{ secrets.DOCKER_REPO }}:latest
